--- a/cloudformation-input-template.yml
+++ b/cloudformation-input-template.yml
@@ -5,7 +5,7 @@ Resources:
   HelloFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: index.handler
+      Handler: cwt.lambda.Hello
       Runtime: java8
       CodeUri: .
       Events:
