--- a/cloudformation-input-template.yml
+++ b/cloudformation-input-template.yml
@@ -7,7 +7,7 @@ Resources:
     Properties:
       Handler: cwt.lambda.Hello
       Runtime: java8
-      CodeUri: .
+      CodeUri: build/distributions/java4lambda.zip
       Events:
         MyTimeApi:
           Type: Api
