--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,7 @@ version: 0.2
 
 phases:
   install:
+    java: openjdk8
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
